--- a/index.html
+++ b/index.html
@@ -336,93 +336,177 @@
 
 <body>
 
-    <header
-        class="fixed top-0 w-full z-[200] px-16 py-8 flex justify-between items-center bg-black/20 backdrop-blur-sm">
-        <div class="relative h-12 w-48 flex items-center">
-            <a href="index.html" class="absolute left-0 top-1/2 -translate-y-1/2 hover:opacity-80 transition-opacity">
-                <img src="image/image.png" alt="Creato Studios Logo" class="h-32 w-auto object-contain max-w-none">
-            </a>
+<header
+  class="fixed top-0 w-full z-[200] px-6 md:px-16 py-5 flex justify-between items-center bg-black/30 backdrop-blur-md">
+
+  <!-- LOGO -->
+  <div class="relative h-12 w-48 flex items-center">
+    <a href="index.html"
+      class="absolute left-0 top-1/2 -translate-y-1/2 hover:opacity-80 transition-opacity">
+      <img src="image/image.png" alt="Creato Studios Logo"
+        class="h-12 md:h-16 w-auto object-contain">
+    </a>
+  </div>
+
+  <!-- DESKTOP NAV -->
+  <nav class="hidden md:flex items-center gap-10 font-semibold text-[15px]">
+    <a href="#" class="border-b-2 border-white pb-1 text-white">Home</a>
+    <a href="about.html" class="text-gray-400 hover:text-white transition">About</a>
+    <a href="contact.html" class="text-gray-400 hover:text-white transition">Contact</a>
+  </nav>
+
+  <!-- DESKTOP BUTTONS -->
+  <div class="hidden md:flex items-center gap-6">
+    <a href="signin.html" class="text-white font-semibold hover:opacity-70">
+      Sign In
+    </a>
+
+    <a href="signup.html"
+      class="bg-white text-black px-7 py-2.5 rounded-full font-bold text-[13px] uppercase tracking-wider hover:bg-gray-200 transition">
+      Collab Now »
+    </a>
+  </div>
+
+  <!-- MOBILE TOGGLE BUTTON -->
+  <button id="menuBtn" class="md:hidden text-white text-3xl">
+    ☰
+  </button>
+</header>
+
+<!-- MOBILE MENU -->
+<div id="mobileMenu"
+  class="fixed top-0 right-0 h-full w-[80%] bg-black text-white z-[300] transform translate-x-full transition-transform duration-300">
+
+  <div class="flex justify-between items-center px-6 py-5 border-b border-white/20">
+    <span class="text-lg font-bold">Menu</span>
+    <button id="closeMenu" class="text-3xl">×</button>
+  </div>
+
+  <nav class="flex flex-col gap-6 p-6 text-lg font-medium">
+    <a href="#" class="hover:text-gray-300">Home</a>
+    <a href="about.html" class="hover:text-gray-300">About</a>
+    <a href="contact.html" class="hover:text-gray-300">Contact</a>
+
+    <hr class="border-white/20 my-4">
+
+    <a href="signin.html" class="hover:text-gray-300">Sign In</a>
+
+    <a href="signup.html"
+      class="bg-white text-black text-center py-3 rounded-full font-bold mt-4">
+      Collab Now »
+    </a>
+  </nav>
+</div>
+
+<main class="hero-bg relative flex flex-col md:flex-row items-center px-6 md:px-16 pt-24 md:pt-20">
+  <!-- LEFT: Headline -->
+  <div class="w-full md:w-1/2 z-10 text-center md:text-left">
+    <h1 class="text-4xl md:text-7xl font-bold leading-snug md:leading-tight mb-6 md:mb-8">
+      Your Gateway to <br class="hidden md:block"> Influencer <br>
+      <span class="text-purple-500 serif-italic">Marketing Excellence</span>
+    </h1>
+
+    <div class="flex justify-center md:justify-start">
+      <button
+        class="bg-white text-black px-8 md:px-12 py-3 md:py-4 rounded-xl font-bold text-lg shadow-xl hover:scale-105 transition transform"
+        aria-label="Let's Create The Magic">
+        Let's Create The Magic
+      </button>
+    </div>
+  </div>
+
+  <!-- RIGHT: Visual / Cards -->
+  <div class="w-full md:w-1/2 relative h-[520px] md:h-[700px] mt-8 md:mt-0 flex justify-center items-start">
+    <!-- Desktop/Tablet: absolute floating cards -->
+    <div class="hidden md:block w-full h-full relative">
+
+      <!-- small banner -->
+      <div class="absolute top-[5%] left-[12%] z-50 bg-white p-4 rounded-2xl shadow-2xl text-black w-56 animate-float">
+        <p class="text-[10px] font-bold text-gray-400 uppercase mb-2">Influencer Collaboration</p>
+        <div class="bg-blue-600 text-white py-2 text-center rounded-lg relative">
+          Video Production
         </div>
+      </div>
 
-        <nav class="flex items-center gap-10 font-semibold text-[15px]">
-            <a href="#" class="border-b-2 border-white pb-1 text-white">Home</a>
-            <a href="about.html" class="text-gray-400 hover:text-white transition">About</a>
-            <!--<a href="#" class="text-gray-400 hover:text-white transition">Working Process</a>-->
-            <!--       <a href="#" class="text-gray-400 hover:text-white transition">Campaigns</a>-->
-            <a href="contact.html" class="text-gray-400 hover:text-white transition">Contact</a>
-        </nav>
-
-        <div class="flex items-center gap-8">
-            <a href="signin.html" class="text-white font-semibold text-[15px] hover:opacity-70 transition">
-                Sign In
-            </a>
-
-            <a href="signup.html"
-                class="bg-white text-black px-8 py-2.5 rounded-full font-bold text-[13px] uppercase tracking-wider hover:bg-gray-200 transition shadow-lg">
-                Collab Now »
-            </a>
-        </div>
-    </header>
-
-    <main class="hero-bg relative flex items-center px-16 pt-20">
-        <div class="w-1/2 z-10">
-            <h1 class="text-7xl font-bold leading-tight mb-8">
-                Your Gateway to <br> Influencer <br>
-                <span class="text-purple-500 serif-italic">Marketing Excellence</span>
-            </h1>
-            <button
-                class="bg-white text-black px-12 py-4 rounded-xl font-bold text-lg shadow-xl hover:scale-105 transition">
-                Let's Create The Magic
-            </button>
-        </div>
-
-        <div class="w-1/2 relative h-[700px]">
-
+      <!-- center big glass profile -->
+      <div
+        class="glass-card absolute w-72 h-[400px] left-[30%] top-[25%] z-40 animate-float shadow-2xl border border-white/20"
+        style="animation-delay: 1s;">
+        <div class="p-6">
+          <h3 class="font-bold text-xl">Abhishek Malhan</h3>
+          <div class="w-48 h-48 mx-auto mt-6 rounded-full border-4 border-white overflow-hidden relative">
+            <img src="image/hero3.png" class="w-full h-full object-cover" alt="Abhishek Malhan">
             <div
-                class="absolute top-[5%] left-[15%] z-50 bg-white p-4 rounded-2xl shadow-2xl text-black w-56 animate-float">
-                <p class="text-[10px] font-bold text-gray-400 uppercase mb-2">Influencer Collaboration</p>
-                <div class="bg-blue-600 text-white py-2 text-center rounded-lg relative">
-                    Video Production
-                    <!-- <img src="https://cdn-icons-png.flaticon.com/512/2037/2037530.png" class="w-10 h-10 absolute -bottom-6 -right-4" alt="Pointer"> -->
-                </div>
+              class="absolute top-1/2 -right-3 bg-blue-700 px-3 py-1 rounded-full border-2 border-white text-[10px] font-bold">
+              3k+ ❤️
             </div>
-
-            <div class="glass-card w-72 h-[400px] left-[30%] top-[25%] z-40 animate-float shadow-2xl border-white/20"
-                style="animation-delay: 1s;">
-                <div class="p-6">
-                    <h3 class="font-bold text-xl">Abhishek Malhan</h3>
-                    <div class="w-48 h-48 mx-auto mt-6 rounded-full border-4 border-white overflow-hidden relative">
-                        <img src="image/hero3.png" class="w-full h-full object-cover">
-                        <div
-                            class="absolute top-1/2 -right-2 bg-blue-700 px-3 py-1 rounded-full border-2 border-white text-[10px] font-bold">
-                            3k+ ❤️</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="glass-card w-64 h-80 left-[65%] top-[10%] z-20 animate-float" style="animation-delay: 2s;">
-                <div class="p-5 flex justify-between items-start">
-                    <h3 class="font-bold">Ritvi Shah</h3>
-                    <div
-                        class="bg-red-500 px-3 py-1 rounded-full border-2 border-white text-[10px] font-bold shadow-lg">
-                        4m+ ❤️</div>
-                </div>
-                <div class="w-40 h-40 mx-auto rounded-full border-4 border-white/10 overflow-hidden">
-                    <img src="image/hero1.jpg" class="w-full h-full object-cover">
-                </div>
-            </div>
-
-            <div class="glass-card w-64 h-80 left-[5%] top-[50%] z-10 animate-float">
-                <div class="p-5">
-                    <h3 class="font-bold">Kritika Khurana</h3>
-                </div>
-                <div class="w-40 h-40 mx-auto rounded-full border-4 border-white/10 overflow-hidden">
-                    <img src="image/hero2.jpg" class="w-full h-full object-cover">
-                </div>
-            </div>
-
+          </div>
         </div>
-    </main>
+      </div>
+
+      <!-- right small -->
+      <div class="glass-card absolute w-64 h-80 left-[65%] top-[10%] z-20 animate-float" style="animation-delay: 2s;">
+        <div class="p-5 flex justify-between items-start">
+          <h3 class="font-bold">Ritvi Shah</h3>
+          <div
+            class="bg-red-500 px-3 py-1 rounded-full border-2 border-white text-[10px] font-bold shadow-lg">
+            4m+ ❤️
+          </div>
+        </div>
+        <div class="w-40 h-40 mx-auto rounded-full border-4 border-white/10 overflow-hidden">
+          <img src="image/hero1.jpg" class="w-full h-full object-cover" alt="Ritvi Shah">
+        </div>
+      </div>
+
+      <!-- left lower -->
+      <div class="glass-card absolute w-64 h-80 left-[5%] top-[50%] z-10 animate-float">
+        <div class="p-5">
+          <h3 class="font-bold">Kritika Khurana</h3>
+        </div>
+        <div class="w-40 h-40 mx-auto rounded-full border-4 border-white/10 overflow-hidden">
+          <img src="image/hero2.jpg" class="w-full h-full object-cover" alt="Kritika Khurana">
+        </div>
+      </div>
+    </div>
+
+    <!-- MOBILE: horizontal scroll card stack (visible only on small screens) -->
+    <div class="md:hidden w-full">
+      <div class="overflow-x-auto no-scrollbar px-2 py-3">
+        <div class="flex gap-4">
+          <!-- card 1 -->
+          <article class="inline-block w-64 shrink-0 bg-white/10 backdrop-blur-md rounded-2xl p-4 shadow-lg">
+            <p class="text-[10px] font-bold text-gray-300 uppercase mb-2">Influencer Collaboration</p>
+            <div class="bg-blue-600 text-white py-2 text-center rounded-lg">Video Production</div>
+            <h3 class="mt-4 font-bold">Abhishek Malhan</h3>
+            <div class="w-28 h-28 mt-4 rounded-full overflow-hidden border-4 border-white/10 mx-auto">
+              <img src="image/hero3.png" class="w-full h-full object-cover" alt="Abhishek Malhan">
+            </div>
+            <div class="mt-3 text-center text-sm font-bold">3k+ ❤️</div>
+          </article>
+
+          <!-- card 2 -->
+          <article class="inline-block w-56 shrink-0 bg-white/10 backdrop-blur-md rounded-2xl p-4 shadow-lg">
+            <h3 class="font-bold">Ritvi Shah</h3>
+            <div class="w-24 h-24 mt-4 rounded-full overflow-hidden border-4 border-white/10 mx-auto">
+              <img src="image/hero1.jpg" class="w-full h-full object-cover" alt="Ritvi Shah">
+            </div>
+            <div class="mt-3 text-center text-sm font-bold">4m+ ❤️</div>
+          </article>
+
+          <!-- card 3 -->
+          <article class="inline-block w-56 shrink-0 bg-white/10 backdrop-blur-md rounded-2xl p-4 shadow-lg">
+            <h3 class="font-bold">Kritika Khurana</h3>
+            <div class="w-24 h-24 mt-4 rounded-full overflow-hidden border-4 border-white/10 mx-auto">
+              <img src="image/hero2.jpg" class="w-full h-full object-cover" alt="Kritika Khurana">
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</main>
+
 
     <section class="bg-white py-24 text-center">
         <div class="container mx-auto px-6">
@@ -1189,6 +1273,17 @@
 
 
     <script>
+          const menuBtn = document.getElementById("menuBtn");
+  const closeMenu = document.getElementById("closeMenu");
+  const mobileMenu = document.getElementById("mobileMenu");
+
+  menuBtn.addEventListener("click", () => {
+    mobileMenu.classList.remove("translate-x-full");
+  });
+
+  closeMenu.addEventListener("click", () => {
+    mobileMenu.classList.add("translate-x-full");
+  });
         // Collab With Top Influencers
         function scrollSlider(direction) {
             const slider = document.getElementById('influencer-slider');
