--- a/index.html
+++ b/index.html
@@ -713,85 +713,105 @@
         </div>
     </section>
     <!-- Unlock brand success with powerful -->
-    <section class="grid-bg py-24 px-6 md:px-16 bg-white border-t border-gray-100">
-        <div class="max-w-7xl mx-auto">
-            <div class="text-center mb-16">
-                <p class="text-sm font-bold text-gray-900 mb-4 tracking-tight">Create Amazing Campaigns</p>
-                <h2 class="text-5xl md:text-6xl font-extrabold text-gray-900 leading-tight">
-                    Unlock brand success with powerful <br>
-                    <span class="text-purple-600 serif-italic">creator collaborations</span>
-                </h2>
-            </div>
+<section class="bg-white py-20 px-6 md:px-16 border-t border-gray-100">
+  <div class="max-w-7xl mx-auto">
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 relative">
+    <!-- Heading -->
+    <div class="text-center mb-16">
+      <p class="text-sm font-bold text-gray-900 mb-3 tracking-wide">
+        Create Amazing Campaigns
+      </p>
+      <h2 class="text-4xl md:text-6xl font-extrabold text-gray-900 leading-tight">
+        Unlock brand success with powerful <br>
+        <span class="text-purple-600 serif-italic">
+          creator collaborations
+        </span>
+      </h2>
+    </div>
 
-                <div
-                    class="bg-white p-12 rounded-[30px] shadow-sm border border-gray-100 relative overflow-hidden group hover:shadow-xl transition-all">
-                    <span
-                        class="absolute top-8 right-8 text-8xl font-black text-gray-50 opacity-100 group-hover:text-purple-50">01</span>
-                    <div
-                        class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6 border border-purple-200">
-                        <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Influencer Partnerships</h3>
-                    <p class="text-gray-500 leading-relaxed max-w-xs">Connect with top creators to amplify your brand's
-                        reach and impact</p>
-                </div>
+    <!-- Cards -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
 
-                <div
-                    class="bg-white p-12 rounded-[30px] shadow-sm border border-gray-100 relative overflow-hidden group hover:shadow-xl transition-all">
-                    <span class="absolute top-8 right-8 text-8xl font-black text-gray-50 opacity-100">02</span>
-                    <div
-                        class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6 border border-purple-200">
-                        <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
-                            </path>
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Podcast Spotlights</h3>
-                    <p class="text-gray-500 leading-relaxed max-w-xs">Get featured on leading podcasts to enhance brand
-                        credibility and engagement</p>
-                </div>
+      <!-- Card 1 -->
+      <div class="bg-white p-8 md:p-12 rounded-[28px] border border-gray-100 shadow-sm hover:shadow-xl transition">
+        <span class="absolute top-6 right-6 text-7xl font-black text-gray-100">01</span>
 
-                <div
-                    class="bg-white p-12 rounded-[30px] shadow-sm border border-gray-100 relative overflow-hidden group hover:shadow-xl transition-all">
-                    <span class="absolute top-8 right-8 text-8xl font-black text-gray-50 opacity-100">03</span>
-                    <div
-                        class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6 border border-purple-200">
-                        <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z">
-                            </path>
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">UGC & High-Impact Video Production</h3>
-                    <p class="text-gray-500 leading-relaxed max-w-xs">Create authentic, high-quality content that
-                        resonates with your audience</p>
-                </div>
-
-                <div
-                    class="bg-white p-12 rounded-[30px] shadow-sm border border-gray-100 relative overflow-hidden group hover:shadow-xl transition-all">
-                    <span class="absolute top-8 right-8 text-8xl font-black text-gray-50 opacity-100">04</span>
-                    <div
-                        class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6 border border-purple-200">
-                        <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
-                            </path>
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Celebrity Brand Endorsements</h3>
-                    <p class="text-gray-500 leading-relaxed max-w-xs">Leverage star power to elevate brand awareness and
-                        consumer trust</p>
-                </div>
-
-            </div>
+        <div class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6">
+          <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0"/>
+          </svg>
         </div>
-    </section>
+
+        <h3 class="text-xl md:text-2xl font-bold text-gray-900 mb-3">
+          Influencer Partnerships
+        </h3>
+        <p class="text-gray-500 leading-relaxed">
+          Connect with top creators to amplify your brand’s reach and engagement.
+        </p>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white p-8 md:p-12 rounded-[28px] border border-gray-100 shadow-sm hover:shadow-xl transition">
+        <span class="absolute top-6 right-6 text-7xl font-black text-gray-100">02</span>
+
+        <div class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6">
+          <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15.232 5.232l3.536 3.536M16.732 3.732L6.5 21.036H3v-3.572L16.732 3.732z"/>
+          </svg>
+        </div>
+
+        <h3 class="text-xl md:text-2xl font-bold text-gray-900 mb-3">
+          Podcast Spotlights
+        </h3>
+        <p class="text-gray-500 leading-relaxed">
+          Get featured on leading podcasts to boost brand trust and visibility.
+        </p>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white p-8 md:p-12 rounded-[28px] border border-gray-100 shadow-sm hover:shadow-xl transition">
+        <span class="absolute top-6 right-6 text-7xl font-black text-gray-100">03</span>
+
+        <div class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6">
+          <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 10h18M7 15h1m4 0h1m-7 4h12"/>
+          </svg>
+        </div>
+
+        <h3 class="text-xl md:text-2xl font-bold text-gray-900 mb-3">
+          UGC & Video Production
+        </h3>
+        <p class="text-gray-500 leading-relaxed">
+          High-quality content crafted for engagement, reach, and conversions.
+        </p>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="bg-white p-8 md:p-12 rounded-[28px] border border-gray-100 shadow-sm hover:shadow-xl transition">
+        <span class="absolute top-6 right-6 text-7xl font-black text-gray-100">04</span>
+
+        <div class="w-14 h-14 bg-purple-100 rounded-xl flex items-center justify-center mb-6">
+          <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0..."/>
+          </svg>
+        </div>
+
+        <h3 class="text-xl md:text-2xl font-bold text-gray-900 mb-3">
+          Celebrity Endorsements
+        </h3>
+        <p class="text-gray-500 leading-relaxed">
+          Leverage celebrity influence to build trust and brand recall.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
     <!-- From Connections to Conversions -Roadmap to Success in 4 Steps -->
     <section class="py-24 px-6 bg-white overflow-hidden font-sans">
         <div class="max-w-6xl mx-auto">
