make the home page mobile risponsive

--- a/index.html
+++ b/index.html
@@ -1528,69 +1528,86 @@
 
 
 
-    <!-- <section class="relative bg-[#020205] py-24 px-16 overflow-hidden">
-    <div class="absolute left-0 bottom-0 w-64 h-64 opacity-20" style="background-image: radial-gradient(#ffffff 1px, transparent 1px); background-size: 20px 20px;"></div>
-    <div class="absolute right-0 top-20 w-96 h-96 bg-yellow-500/10 blur-[120px] rounded-full"></div>
+   <!-- <section class="relative bg-[#020205] py-20 px-6 md:px-16 overflow-hidden">
 
-    <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center gap-16">
-        
-        <div class="lg:w-1/2 z-10">
-            <div class="flex items-center gap-3 mb-6">
-                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png" class="w-8 h-8" alt="Star Icon">
-                <span class="font-bold uppercase tracking-[0.3em] text-sm">What We Provide</span>
-            </div>
 
-            <h2 class="text-6xl font-bold leading-tight mb-8">
-                Explore Powerful Social <br> Media Features for <br>
-                <span class="text-purple-500 serif-italic">Creators & Influencers</span>
-            </h2>
+  <div class="absolute left-0 bottom-0 w-48 h-48 opacity-20 hidden md:block"
+       style="background-image: radial-gradient(#ffffff 1px, transparent 1px); background-size: 20px 20px;"></div>
 
-            <p class="text-gray-400 text-lg leading-relaxed mb-10 max-w-xl">
-                Discover a world of innovative social media features designed for creators and influencers. 
-                From seamless collaborations to audience engagement tools, elevate your brand like never before. 
-                Your journey starts here!
-            </p>
+  <div class="absolute right-0 top-24 w-72 h-72 bg-yellow-500/10 blur-[120px] rounded-full"></div>
 
-            <div class="grid grid-cols-2 gap-4 max-w-md">
-                <div class="bg-white text-black py-4 px-8 rounded-2xl flex items-center gap-3 font-bold shadow-lg">
-                    <span class="bg-purple-600 text-white rounded-full w-5 h-5 flex items-center justify-center text-[10px]">✓</span>
-                    Creators
-                </div>
-                <div class="bg-white text-black py-4 px-8 rounded-2xl flex items-center gap-3 font-bold shadow-lg">
-                    <span class="bg-purple-600 text-white rounded-full w-5 h-5 flex items-center justify-center text-[10px]">✓</span>
-                    Artists
-                </div>
-                <div class="bg-white text-black py-4 px-8 rounded-2xl flex items-center gap-3 font-bold shadow-lg">
-                    <span class="bg-purple-600 text-white rounded-full w-5 h-5 flex items-center justify-center text-[10px]">✓</span>
-                    Influencers
-                </div>
-                <div class="bg-white text-black py-4 px-8 rounded-2xl flex items-center gap-3 font-bold shadow-lg">
-                    <span class="bg-purple-600 text-white rounded-full w-5 h-5 flex items-center justify-center text-[10px]">✓</span>
-                    Celebrities
-                </div>
-            </div>
+  <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center gap-16">
+
+
+    <div class="w-full lg:w-1/2 z-10 text-center lg:text-left">
+
+      <div class="flex items-center justify-center lg:justify-start gap-3 mb-6">
+        <img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
+             class="w-7 h-7" alt="Star">
+        <span class="font-bold uppercase tracking-[0.3em] text-sm text-white">
+          What We Provide
+        </span>
+      </div>
+
+      <h2 class="text-4xl md:text-5xl xl:text-6xl font-bold leading-tight mb-6 text-white">
+        Explore Powerful Social <br>
+        Media Features for <br>
+        <span class="text-purple-500 serif-italic">
+          Creators & Influencers
+        </span>
+      </h2>
+
+      <p class="text-gray-400 text-base md:text-lg leading-relaxed mb-10 max-w-xl mx-auto lg:mx-0">
+        Discover a world of innovative social media features designed for creators and influencers.
+        From collaborations to engagement tools — grow faster with Creato Studios.
+      </p>
+
+
+      <div class="grid grid-cols-2 gap-4 max-w-md mx-auto lg:mx-0">
+        <div class="bg-white text-black py-3 px-6 rounded-xl flex items-center gap-3 font-semibold shadow">
+          <span class="bg-purple-600 text-white w-5 h-5 flex items-center justify-center rounded-full text-xs">✓</span>
+          Creators
         </div>
-
-        <div class="lg:w-1/2 relative flex justify-center items-center">
-            <div class="w-[500px] h-[350px] rounded-[40px] overflow-hidden border-4 border-white/10 shadow-2xl relative z-0">
-                <img src="https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?auto=format&fit=crop&q=80" class="w-full h-full object-cover" alt="Social Media Usage">
-                <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-8">
-                    <div class="flex gap-2">
-                        <span class="animate-bounce delay-75">❤️</span>
-                        <span class="animate-bounce delay-150">😍</span>
-                        <span class="animate-bounce delay-300">🔥</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="absolute -bottom-16 -left-10 w-64 h-64 rounded-full border-[10px] border-[#020205] overflow-hidden z-20 shadow-2xl">
-                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80" class="w-full h-full object-cover" alt="Profile">
-            </div>
-
-            <div class="absolute -right-10 bottom-0 w-32 h-32 opacity-30" style="background-image: radial-gradient(#ffffff 2px, transparent 2px); background-size: 15px 15px;"></div>
+        <div class="bg-white text-black py-3 px-6 rounded-xl flex items-center gap-3 font-semibold shadow">
+          <span class="bg-purple-600 text-white w-5 h-5 flex items-center justify-center rounded-full text-xs">✓</span>
+          Artists
         </div>
-
+        <div class="bg-white text-black py-3 px-6 rounded-xl flex items-center gap-3 font-semibold shadow">
+          <span class="bg-purple-600 text-white w-5 h-5 flex items-center justify-center rounded-full text-xs">✓</span>
+          Influencers
+        </div>
+        <div class="bg-white text-black py-3 px-6 rounded-xl flex items-center gap-3 font-semibold shadow">
+          <span class="bg-purple-600 text-white w-5 h-5 flex items-center justify-center rounded-full text-xs">✓</span>
+          Celebrities
+        </div>
+      </div>
     </div>
+
+    <div class="w-full lg:w-1/2 relative flex justify-center items-center">
+
+      <div class="w-[90%] sm:w-[420px] md:w-[500px] h-[260px] sm:h-[300px] md:h-[350px]
+                  rounded-[32px] overflow-hidden border-4 border-white/10 shadow-2xl relative">
+        <img src="https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?auto=format&fit=crop&q=80"
+             class="w-full h-full object-cover" alt="Social Media">
+
+        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6">
+          <div class="flex gap-2 text-xl">
+            <span class="animate-bounce">❤️</span>
+            <span class="animate-bounce delay-150">😍</span>
+            <span class="animate-bounce delay-300">🔥</span>
+          </div>
+        </div>
+      </div>
+
+  
+      <div
+        class="absolute -bottom-14 left-6 sm:left-0 w-28 h-28 sm:w-32 sm:h-32 rounded-full overflow-hidden border-[6px] border-[#020205] shadow-xl">
+        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&q=80"
+             class="w-full h-full object-cover" alt="Profile">
+      </div>
+    </div>
+
+  </div>
 </section> -->
 
 
