make the home page mobile risponsive

--- a/index.html
+++ b/index.html
@@ -527,15 +527,19 @@ small, .text-xs {
             <div class="hidden md:block w-full h-full relative">
 
                 <!-- small banner -->
-                <div
-                    class="hidden md:block absolute top-[5%] left-[12%] z-50 bg-white p-4 rounded-2xl shadow-2xl text-black w-56 animate-float">
-                    <p class="text-[10px] font-bold text-gray-400 uppercase mb-2">
-                        Influencer Collaboration
-                    </p>
-                    <div class="bg-blue-600 text-white py-2 text-center rounded-lg">
-                        Video Production
-                    </div>
-                </div>
+<div
+  class="absolute top-[5%] left-[12%] z-50 bg-white p-4 rounded-2xl shadow-2xl text-black w-56 animate-float
+         hidden lg:block">
+  
+  <p class="text-[10px] font-bold text-gray-400 uppercase mb-2">
+    Influencer Collaboration
+  </p>
+
+  <div class="bg-blue-600 text-white py-2 text-center rounded-lg">
+    Video Production
+  </div>
+</div>
+
 
 
                 <!-- center big glass profile -->
