--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ small, .text-xs {
                 <!-- small banner -->
 <div
   class="absolute top-[5%] left-[12%] z-50 bg-white p-4 rounded-2xl shadow-2xl text-black w-56 animate-float
-         hidden lg:block">
+         hidden! lg:block">
   
   <p class="text-[10px] font-bold text-gray-400 uppercase mb-2">
     Influencer Collaboration
