make the home page mobile risponsiv

--- a/contact.html
+++ b/contact.html
@@ -268,5 +268,107 @@
     </div>
 </section>
 
+<!-- FOOTER -->
+<footer class="relative mt-40">
+
+  <!-- CTA Banner -->
+  <div class="absolute top-0 left-0 right-0 -translate-y-1/2 z-30 px-4">
+    <div
+      class="max-w-6xl mx-auto bg-[#7c3aed] rounded-[32px] md:rounded-[45px] p-8 md:p-14 flex flex-col md:flex-row items-center justify-between gap-8 shadow-2xl relative overflow-hidden">
+
+      <div class="absolute inset-0 opacity-20"
+        style="background: radial-gradient(circle at center, white 0%, transparent 75%);"></div>
+
+      <div class="relative z-10 text-center md:text-left">
+        <p class="text-white text-xs font-bold uppercase tracking-[0.3em] mb-3">
+          Join The Revolution
+        </p>
+        <h2 class="text-white text-3xl md:text-5xl font-extrabold leading-tight">
+          Turn Influencer Power <br>
+          into Your Brand’s <span class="serif-italic">Success!</span>
+        </h2>
+      </div>
+
+      <div class="relative z-10 flex flex-col items-center md:items-end gap-5 text-center md:text-right">
+        <p class="text-white/90 text-sm max-w-sm">
+          Start your brand's journey with strategic influencer collaborations.
+        </p>
+        <button
+          class="border-2 border-white text-white px-8 py-3 rounded-full font-bold hover:bg-white hover:text-[#7c3aed] transition">
+          Let's Create The Magic →
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer Body -->
+  <div class="pt-64 pb-12 px-6 md:px-20 bg-[#020205]">
+
+    <div class="max-w-7xl mx-auto">
+
+      <!-- Top Row -->
+      <div class="flex flex-col md:flex-row justify-between items-center gap-10 mb-16">
+
+        <!-- Logo -->
+        <div class="flex items-center">
+        <img 
+            src="image/image.png"
+            alt="Creato Studios Logo"
+            class="w-auto h-20 md:h-24 object-contain scale-150 origin-left"
+        >
+        </div>
+
+        <!-- Creators -->
+        <div class="flex flex-col items-center md:items-end gap-3">
+          <span class="text-white font-semibold text-sm">
+            1000+ Creators Onboard
+          </span>
+          <div class="flex -space-x-3">
+            <img src="image/image_17.jpg" class="w-9 h-9 rounded-full border-2 border-black">
+            <img src="image/hero1.jpg" class="w-9 h-9 rounded-full border-2 border-black">
+            <img src="image/hero2.jpg" class="w-9 h-9 rounded-full border-2 border-black">
+            <img src="image/hero3.png" class="w-9 h-9 rounded-full border-2 border-black">
+          </div>
+        </div>
+      </div>
+
+      <!-- Middle Grid -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 border-t border-white/10 pt-12 mb-12">
+
+        <div>
+          <h4 class="text-white font-bold text-lg mb-4">About</h4>
+          <p class="text-gray-400 text-sm leading-relaxed max-w-sm">
+            We craft high-impact influencer campaigns, UGC, podcasts, and celebrity collaborations to elevate brands.
+          </p>
+        </div>
+
+        <div>
+          <h4 class="text-white font-bold text-lg mb-4">Contact</h4>
+          <ul class="text-gray-400 text-sm space-y-3">
+            <li>📞 +91 7838855855</li>
+            <li>📧 support@creatostudios.com</li>
+            <li>📍 A-27D, Sector 16, Noida (Metro Exit 4)</li>
+          </ul>
+        </div>
+
+      </div>
+
+      <!-- Bottom Bar -->
+      <div
+        class="border-t border-white/10 pt-6 flex flex-col md:flex-row justify-between items-center gap-4 text-xs text-gray-500">
+
+        <p>
+          © 2025 <span class="text-[#7c3aed] font-bold">Creato Studios</span>. All rights reserved.
+        </p>
+
+        <p class="flex items-center gap-1">
+          Crafted with <span class="text-red-500">❤️</span> by Kanishka
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 </body>
 </html>
