make the home page mobile risponsiv

--- a/index.html
+++ b/index.html
@@ -597,8 +597,15 @@
                         <!-- card 1 -->
                         <article
                             class="inline-block w-64 shrink-0 bg-white/10 backdrop-blur-md rounded-2xl p-4 shadow-lg">
-                            <p class="text-[10px] font-bold text-gray-300 uppercase mb-2">Influencer Collaboration</p>
-                            <div class="bg-blue-600 text-white py-2 text-center rounded-lg">Video Production</div>
+<div class="hidden md:block">
+    <p class="text-[10px] font-bold text-gray-300 uppercase mb-2">
+        Influencer Collaboration
+    </p>
+    <div class="bg-blue-600 text-white py-2 text-center rounded-lg">
+        Video Production
+    </div>
+</div>
+
                             <h3 class="mt-4 font-bold">Abhishek Malhan</h3>
                             <div class="w-28 h-28 mt-4 rounded-full overflow-hidden border-4 border-white/10 mx-auto">
                                 <img src="image/hero3.png" class="w-full h-full object-cover" alt="Abhishek Malhan">
