--- a/index.html
+++ b/index.html
@@ -451,18 +451,14 @@
         class="fixed top-0 w-full z-[200] px-6 md:px-16 py-5 flex justify-between items-center bg-black/30 backdrop-blur-md">
 
         <!-- LOGO -->
-<div class="relative h-12 w-48 overflow-visible">
-    <a href="index.html"
-       class="absolute left-0 top-1/2 -translate-y-1/2">
-       
-        <img 
-            src="image/image.png"
-            alt="Creato Studios Logo"
-            class="w-auto h-20 md:h-24 object-contain scale-150 origin-left"
-        >
-        
-    </a>
-</div>
+        <div class="relative h-12 w-48 overflow-visible">
+            <a href="index.html" class="absolute left-0 top-1/2 -translate-y-1/2">
+
+                <img src="image/image.png" alt="Creato Studios Logo"
+                    class="w-auto h-20 md:h-24 object-contain scale-150 origin-left">
+
+            </a>
+        </div>
 
 
 
@@ -597,14 +593,14 @@
                         <!-- card 1 -->
                         <article
                             class="inline-block w-64 shrink-0 bg-white/10 backdrop-blur-md rounded-2xl p-4 shadow-lg">
-<div class="hidden md:block">
-    <p class="text-[10px] font-bold text-gray-300 uppercase mb-2">
-        Influencer Collaboration
-    </p>
-    <div class="bg-blue-600 text-white py-2 text-center rounded-lg">
-        Video Production
-    </div>
-</div>
+                            <div class="hidden md:block">
+                                <p class="text-[10px] font-bold text-gray-300 uppercase mb-2">
+                                    Influencer Collaboration
+                                </p>
+                                <div class="bg-blue-600 text-white py-2 text-center rounded-lg">
+                                    Video Production
+                                </div>
+                            </div>
 
                             <h3 class="mt-4 font-bold">Abhishek Malhan</h3>
                             <div class="w-28 h-28 mt-4 rounded-full overflow-hidden border-4 border-white/10 mx-auto">
@@ -1389,9 +1385,8 @@
                 <div class="flex flex-col md:flex-row justify-between items-center gap-10 mb-16">
 
                     <!-- Logo -->
-                    <div class="flex items-center">
-                        <img src="image/image.png" class="h-14 md:h-20 object-contain" alt="Creato Studios">
-                    </div>
+                    <img src="image/image.png" alt="Creato Studios Logo"
+                        class="w-auto h-20 md:h-24 object-contain scale-150 origin-left">
 
                     <!-- Creators -->
                     <div class="flex flex-col items-center md:items-end gap-3">
