make the home page mobile risponsiv

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -184,7 +184,7 @@
   (function () {
     const STORAGE_KEY = "Bearer";
     const API_BASE = "https://creatostudiosbackend.vercel.app/v1"; // your API base
-    const SITE_BASE = "https://lightyellow-butterfly-362806.hostingersite.com/signup.html"; // signup url
+    const SITE_BASE = "https://creatostudios.com/signup.html"; // signup url
     const POLL_INTERVAL_MS = 0;
     /** Helpers **/
     function escapeHtml (str) {
