--- a/contact.html
+++ b/contact.html
@@ -362,7 +362,7 @@
         </p>
 
         <p class="flex items-center gap-1">
-          Crafted with <span class="text-red-500">❤️</span> by Kanishka
+          Crafted with <span class="text-red-500">❤️</span> by Tushar and Kanishka
         </p>
       </div>
     </div>
